--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>FM-Tech inc.</title>
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#header" data-bs-offset="100" tabindex="0">
     <noscript>Developpeur front-end</noscript>
     <div id="root"></div>
     <!--
