--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="https://www.fm-tech.ca" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description"  
+    content="FM-Tech, développeur web, développeur front-end, conception web application, javascript, html, scss,  css, angular, react, node, responsive design, seo" />
+    <meta property="og:title" content="FM-Tech inc">
+    <meta property="og:url" content="https://www.fm-tech.ca">
+    <meta property="og:description" content="FM-Tech, développeur web, développeur front-end, conception web application, javascript, html, scss,  css, angular, react, node, responsive design, seo" />
+    <meta property="og:image" content="https://www.fm-tech.ca/assets/img/logo-fm-tech.png">
+    <meta property="og:site_name" content="FM-Tech">
+    <meta property="og:type" content="website">
+    <link rel="canonical" href="https://www.fm-tech.ca">
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>FM-Tech inc.</title>
+    <title>FM-Tech</title>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#header" data-bs-offset="100" tabindex="0">
     <noscript>Developpeur front-end</noscript>
